@@ -90,10 +90,9 @@
 			debug="true"
 			debuglevel="lines,vars,source"
 			srcdir="${dir.buildfile}/src/gov/gsa/icamcardbuilder/app/" 
-			destdir="${dir.buildfile}/bin"
-			target="10">
+			destdir="${dir.buildfile}/bin">
 			<classpath refid="classpath" />
-			<compilerarg line="-Xlint --add-modules java.xml.bind" />
+			<compilerarg line="-Xlint" />
 		</javac>
 	</target>
 	<target name="distclean">
@@ -120,7 +119,7 @@
 			doctitle="GSA ICAM Card Builder" nodeprecated="false"
 			nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false"
 			packagenames="gov.gsa.icamcardbuilder.app"
-			source="1.8" sourcepath="src" splitindex="true" use="true" version="true">
+			source="10" sourcepath="src" splitindex="true" use="true" version="true">
 			<link href="http://download.oracle.com/javase/8/docs/api/" />
 			<link href="http://docs.oracle.com/javase/8/docs/jre/api/security/smartcardio/spec/" />
 			<link href="https://www.bouncycastle.org/docs/docs1.5on/" />
